2013-07-21  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/56937
	* dependency.c (gfc_dep_resolver):  Treat identical
	array subscripts as identical; don't unconditionally
	return a dependency if an array subscript is found.

2013-07-21  Tobias Burnus  <burnus@net-b.de>

	PR fortran/35862
	* libgfortran.h (GFC_FPE_DOWNWARD, GFC_FPE_TONEAREST,
	GFC_FPE_TOWARDZERO, GFC_FPE_UPWARD): New defines.

2013-07-21  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57894
	* check.c (min_max_args): Add keyword= check.

2013-07-17  Mikael Morin  <mikael@gcc.gnu.org>
	    Tobias Burnus  <burnus@net-b.de>

	PR fortran/57895
	* match.c (gfc_match_name): Ensure that the error
	message regarding -fdollar-ok gets printed.
	(gfc_match_common): Avoid multiple freeing.

2013-07-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57912
	* trans-expr.c (gfc_trans_scalar_assign): Correct if
	condition for caf realloc.

2013-07-15  Tobias Burnus  <burnus@net-b.de>

	* trans-array.h (gfc_deallocate_alloc_comp_no_caf,
	gfc_reassign_alloc_comp_caf): New prototype.
	* trans-array.c (enum): Add DEALLOCATE_ALLOC_COMP_NO_CAF
	and COPY_ALLOC_COMP_CAF.
	(structure_alloc_comps): Handle it.
	(gfc_reassign_alloc_comp_caf,
	gfc_deallocate_alloc_comp_no_caf): New function.
	(gfc_alloc_allocatable_for_assignment): Call it.
	* trans-expr.c (gfc_trans_scalar_assign,
	gfc_trans_arrayfunc_assign, gfc_trans_assignment_1): Ditto.
	* parse.c (parse_derived): Correctly set coarray_comp.
	* resolve.c (resolve_symbol): Improve error wording.

2013-07-15  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37336
	* trans.c (gfc_add_comp_finalizer_call): New function.
	* trans.h (gfc_add_comp_finalizer_call): New prototype.
	* trans-array.c (structure_alloc_comps): Call it.

2013-07-14  Thomas Koenig  <tkoenig@gcc.gnu.org>
	    Tobias Burnus  <burnus@gcc.gnu.org>

	PR fortran/52669
	* trans-decl.c (gfc_finish_var_decl):  Move setting of
	PRIVATE for a module variable if the module has a private