@@ -1,3 +1,7 @@
+2013-07-21   Ondřej Bílka  <neleai@seznam.cz>
+
+	* io/transfer.c: Fix comment typos.
+
 2013-07-21  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/35862
