@@ -1,3 +1,8 @@
+2013-07-21   Ondřej Bílka  <neleai@seznam.cz>
+
+	* trans-decl.c: Fix comment typos.
+	* trans-expr.c: Ditto.
+
 2013-07-21  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/56937
